tests/ui/lang-items/start_lang_item_args.main_ret.stderr
error: parameter 1 of the `start` lang item is incorrect
  --> $DIR/start_lang_item_args.rs:68:20
   |
LL | fn start<T>(_main: fn() -> u16, _argc: isize, _argv: *const *const u8, _sigpipe: u8) -> isize {
   |                    ^^^^^^^^^^^
   |
help: change the type from `fn() -> u16` to `fn() -> T`
   |
LL | fn start<T>(_main: fn() -> T, _argc: isize, _argv: *const *const u8, _sigpipe: u8) -> isize {
   |                    ~~~~~~~~~

error: aborting due to previous error

